@@ -2,15 +2,14 @@
 package com.elixir.biohackaton.ISAToSRA.biosamples.service;
 
 import com.elixir.biohackaton.ISAToSRA.biosamples.model.Attribute;
+import com.elixir.biohackaton.ISAToSRA.biosamples.model.BiosampleAccessionsMap;
 import com.elixir.biohackaton.ISAToSRA.biosamples.model.Relationship;
-import com.elixir.biohackaton.ISAToSRA.biosamples.model.Sample;
-import com.elixir.biohackaton.ISAToSRA.model.Category;
-import com.elixir.biohackaton.ISAToSRA.model.Characteristic;
-import com.elixir.biohackaton.ISAToSRA.model.Study;
-import com.elixir.biohackaton.ISAToSRA.model.Value;
+import com.elixir.biohackaton.ISAToSRA.biosamples.model.BioSample;
+import com.elixir.biohackaton.ISAToSRA.receipt.ReceiptAccessionsMap;
+import com.elixir.biohackaton.ISAToSRA.receipt.isamodel.*;
+
 import java.time.Instant;
 import java.util.*;
-import java.util.concurrent.atomic.AtomicInteger;
 import java.util.concurrent.atomic.AtomicReference;
 import lombok.extern.slf4j.Slf4j;
 import org.springframework.core.ParameterizedTypeReference;
@@ -25,11 +24,12 @@ import org.springframework.web.client.RestTemplate;
 @Service
 @Slf4j
 public class BioSamplesSubmitter {
-  public Map<String, String> createBioSamples(final List<Study> studies, final String webinToken) {
-    final Map<String, String> typeToBioSamplesAccessionMap = new HashMap<>();
+
+  public BiosampleAccessionsMap createBioSamples(final List<Study> studies, final String webinToken) {
+    final BiosampleAccessionsMap typeToBioSamplesAccessionMap = new BiosampleAccessionsMap();
 
     try {
-      final Sample sourceBioSample = this.createSourceBioSample(studies, webinToken);
+      final BioSample sourceBioSample = this.createSourceBioSample(studies, webinToken);
       Attribute sourceBioSampleOrganismAttribute = null;
 
       for (final Attribute attribute : sourceBioSample.getAttributes()) {
@@ -37,41 +37,43 @@ public class BioSamplesSubmitter {
           sourceBioSampleOrganismAttribute = attribute;
         }
       }
-      typeToBioSamplesAccessionMap.put("SOURCE", sourceBioSample.getAccession());
+
+      typeToBioSamplesAccessionMap.sourceAccessionsMap.keyName = Source.Fields.name;
+      typeToBioSamplesAccessionMap.sourceAccessionsMap.accessionMap.put(
+          sourceBioSample.getName(),
+          sourceBioSample.getAccession());
 
       if (sourceBioSampleOrganismAttribute != null) {
-        final AtomicInteger counter = new AtomicInteger(0);
         final Attribute finalSourceBioSampleOrganismAttribute = sourceBioSampleOrganismAttribute;
 
         studies.forEach(
             study -> {
+              typeToBioSamplesAccessionMap.studyAccessionsMap = new ReceiptAccessionsMap(
+                  Study.Fields.title,
+                  study.getTitle());
+
               study
                   .getMaterials()
                   .getSamples()
                   .forEach(
                       sample -> {
-                        final Sample persistedChildSample =
-                            this.createAndUpdateChildSampleWithRelationship(
-                                sample,
-                                sourceBioSample.getAccession(),
-                                finalSourceBioSampleOrganismAttribute.getValue(),
-                                webinToken);
+                        final BioSample persistedChildSample = this.createAndUpdateChildSampleWithRelationship(
+                            sample,
+                            sourceBioSample.getAccession(),
+                            finalSourceBioSampleOrganismAttribute.getValue(),
+                            webinToken);
 
                         if (persistedChildSample != null) {
-                          final Characteristic biosampleAccessionCharacteristic =
-                              getBioSampleAccessionCharacteristic(
-                                  new AtomicReference<>(persistedChildSample));
-                          final ArrayList<Characteristic> sampleCharacteristics =
-                              sample.getCharacteristics() != null
-                                  ? sample.getCharacteristics()
-                                  : new ArrayList<>();
-
+                          final Characteristic biosampleAccessionCharacteristic = getBioSampleAccessionCharacteristic(
+                              new AtomicReference<>(persistedChildSample));
+                          final ArrayList<Characteristic> sampleCharacteristics = sample.getCharacteristics() != null
+                              ? sample.getCharacteristics()
+                              : new ArrayList<>();
                           sampleCharacteristics.add(biosampleAccessionCharacteristic);
 
-                          sample.setCharacteristics(sampleCharacteristics);
-
-                          typeToBioSamplesAccessionMap.put(
-                              "CHILD_" + counter.getAndIncrement(),
+                          typeToBioSamplesAccessionMap.sampleAccessionsMap.keyName = Sample.Fields.name;
+                          typeToBioSamplesAccessionMap.sampleAccessionsMap.accessionMap.put(
+                              persistedChildSample.getName(),
                               persistedChildSample.getAccession());
                         }
                       });
@@ -84,34 +86,33 @@ public class BioSamplesSubmitter {
     return typeToBioSamplesAccessionMap;
   }
 
-  private Sample createAndUpdateChildSampleWithRelationship(
-      final com.elixir.biohackaton.ISAToSRA.model.Sample sample,
+  private BioSample createAndUpdateChildSampleWithRelationship(
+      final Sample sample,
       final String sourceBioSampleAccession,
       final String parentSampleOrganism,
       final String webinToken) {
-    final Sample bioSample =
-        new Sample.Builder(sample.getName() != null ? sample.getName() : "child_sample")
-            .withRelease(Instant.now())
-            .withAttributes(
-                Collections.singletonList(Attribute.build("organism", parentSampleOrganism)))
-            .build();
+    final BioSample bioSample = new BioSample.Builder(sample.getName() != null ? sample.getName() : "child_sample")
+        .withRelease(Instant.now())
+        .withAttributes(
+            List.of(Attribute.build("organism", parentSampleOrganism),
+                    Attribute.build("collection date", "not provided"),
+                    Attribute.build("geographic location (country and/or sea)", "not provided")))
+        .build();
     try {
-      final EntityModel<Sample> persistedSampleEntity =
-          this.createSampleInBioSamples(bioSample, webinToken);
+      final EntityModel<BioSample> persistedSampleEntity = this.createSampleInBioSamples(bioSample, webinToken);
 
       if (persistedSampleEntity != null) {
-        final Sample persistedBioSample = persistedSampleEntity.getContent();
+        final BioSample persistedBioSample = persistedSampleEntity.getContent();
 
         if (persistedBioSample != null) {
-          final Sample sampleWithRelationship =
-              Sample.Builder.fromSample(persistedBioSample)
-                  .withRelationships(
-                      Collections.singletonList(
-                          Relationship.build(
-                              persistedBioSample.getAccession(),
-                              "derived from",
-                              sourceBioSampleAccession)))
-                  .build();
+          final BioSample sampleWithRelationship = BioSample.Builder.fromSample(persistedBioSample)
+              .withRelationships(
+                  Collections.singletonList(
+                      Relationship.build(
+                          persistedBioSample.getAccession(),
+                          "derived from",
+                          sourceBioSampleAccession)))
+              .build();
 
           return this.updateSampleWithRelationshipsToBioSamples(sampleWithRelationship, webinToken);
         } else {
@@ -125,56 +126,54 @@ public class BioSamplesSubmitter {
     }
   }
 
-  private Sample createSourceBioSample(final List<Study> studies, final String webinToken) {
-    final AtomicReference<Attribute> organismAttribute =
-        new AtomicReference<>(Attribute.build("", ""));
-    final AtomicReference<Sample> sourceBioSample = new AtomicReference<>(null);
+  private BioSample createSourceBioSample(final List<Study> studies, final String webinToken) {
+    final AtomicReference<Attribute> organismAttribute = new AtomicReference<>(Attribute.build("", ""));
+    final AtomicReference<BioSample> sourceBioSample = new AtomicReference<>(null);
 
     studies.forEach(
-        study ->
-            study
-                .getMaterials()
-                .getSources()
-                .forEach(
-                    source -> {
-                      final ArrayList<Characteristic> sourceCharacteristics =
-                          source.getCharacteristics();
+        study -> study
+            .getMaterials()
+            .getSources()
+            .forEach(
+                source -> {
+                  final ArrayList<Characteristic> sourceCharacteristics = source.getCharacteristics();
 
-                      sourceCharacteristics.forEach(
-                          characteristic -> {
-                            if (characteristic.getCategory().getId().contains("organism")) {
-                              organismAttribute.set(
-                                  Attribute.build(
-                                      "organism", characteristic.getValue().getAnnotationValue()));
-                            }
-                          });
+                  sourceCharacteristics.forEach(
+                      characteristic -> {
+                        if (characteristic.getCategory().getId().contains("organism")) {
+                          organismAttribute.set(
+                              Attribute.build(
+                                  "organism", characteristic.getValue().getAnnotationValue()));
+                        }
+                      });
 
-                      final Sample sourceSample =
-                          new Sample.Builder(source.getName())
-                              .withRelease(Instant.now())
-                              .withAttributes(Collections.singleton(organismAttribute.get()))
-                              .build();
-                      final EntityModel<Sample> persistedParentSampleEntity =
-                          this.createSampleInBioSamples(sourceSample, webinToken);
+                  final BioSample sourceSample = new BioSample.Builder(source.getName())
+                      .withRelease(Instant.now())
+                      .withAttributes(List.of(organismAttribute.get(),
+                              Attribute.build("collection date", "not provided"),
+                              Attribute.build("geographic location (country and/or sea)", "not provided")))
+                      .build();
+                  final EntityModel<BioSample> persistedParentSampleEntity = this.createSampleInBioSamples(sourceSample,
+                      webinToken);
 
-                      if (persistedParentSampleEntity != null) {
-                        sourceBioSample.set(persistedParentSampleEntity.getContent());
+                  if (persistedParentSampleEntity != null) {
+                    sourceBioSample.set(persistedParentSampleEntity.getContent());
 
-                        final Characteristic biosampleAccessionCharacteristic =
-                            getBioSampleAccessionCharacteristic(sourceBioSample);
+                    final Characteristic biosampleAccessionCharacteristic = getBioSampleAccessionCharacteristic(
+                        sourceBioSample);
 
-                        sourceCharacteristics.add(biosampleAccessionCharacteristic);
-                        source.setCharacteristics(sourceCharacteristics);
-                      } else {
-                        throw new RuntimeException("Failed to store source sample to BioSamples");
-                      }
-                    }));
+                    sourceCharacteristics.add(biosampleAccessionCharacteristic);
+                    source.setCharacteristics(sourceCharacteristics);
+                  } else {
+                    throw new RuntimeException("Failed to store source sample to BioSamples");
+                  }
+                }));
 
     return sourceBioSample.get();
   }
 
   private static Characteristic getBioSampleAccessionCharacteristic(
-      AtomicReference<Sample> biosample) {
+      AtomicReference<BioSample> biosample) {
     final Characteristic biosampleAccessionCharacteristic = new Characteristic();
     final Category biosampleAccessionCategory = new Category();
     final Value biosampleAccessionValue = new Value();
@@ -188,43 +187,43 @@ public class BioSamplesSubmitter {
     return biosampleAccessionCharacteristic;
   }
 
-  private Sample updateSampleWithRelationshipsToBioSamples(
-      final Sample sampleWithRelationship, final String webinToken) {
+  private BioSample updateSampleWithRelationshipsToBioSamples(
+      final BioSample sampleWithRelationship, final String webinToken) {
     final RestTemplate restTemplate = new RestTemplate();
-    final ResponseEntity<EntityModel<Sample>> biosamplesResponse;
+    final ResponseEntity<EntityModel<BioSample>> biosamplesResponse;
 
     try {
       final HttpHeaders headers = getHttpHeaders(webinToken);
       final HttpEntity<?> entity = new HttpEntity<>(sampleWithRelationship, headers);
 
-      biosamplesResponse =
-          restTemplate.exchange(
-              "https://wwwdev.ebi.ac.uk/biosamples/samples/"
-                  + sampleWithRelationship.getAccession(),
-              HttpMethod.PUT,
-              entity,
-              new ParameterizedTypeReference<>() {});
+      biosamplesResponse = restTemplate.exchange(
+          "https://wwwdev.ebi.ac.uk/biosamples/samples/"
+              + sampleWithRelationship.getAccession(),
+          HttpMethod.PUT,
+          entity,
+          new ParameterizedTypeReference<>() {
+          });
       return biosamplesResponse.getBody().getContent();
     } catch (final Exception ex) {
       throw new RuntimeException("Failed to add relationships to child samples", ex);
     }
   }
 
-  private EntityModel<Sample> createSampleInBioSamples(
-      final Sample sample, final String webinToken) {
+  private EntityModel<BioSample> createSampleInBioSamples(
+      final BioSample sample, final String webinToken) {
     final RestTemplate restTemplate = new RestTemplate();
-    final ResponseEntity<EntityModel<Sample>> biosamplesResponse;
+    final ResponseEntity<EntityModel<BioSample>> biosamplesResponse;
 
     try {
       final HttpHeaders headers = getHttpHeaders(webinToken);
       final HttpEntity<?> entity = new HttpEntity<>(sample, headers);
 
-      biosamplesResponse =
-          restTemplate.exchange(
-              "https://wwwdev.ebi.ac.uk/biosamples/samples/",
-              HttpMethod.POST,
-              entity,
-              new ParameterizedTypeReference<>() {});
+      biosamplesResponse = restTemplate.exchange(
+          "https://wwwdev.ebi.ac.uk/biosamples/samples/",
+          HttpMethod.POST,
+          entity,
+          new ParameterizedTypeReference<>() {
+          });
 
       return biosamplesResponse.getBody();
     } catch (final Exception ex) {
@@ -233,13 +232,12 @@ public class BioSamplesSubmitter {
   }
 
   private static HttpHeaders getHttpHeaders(String webinToken) {
-    final HttpHeaders headers =
-        new HttpHeaders() {
-          {
-            final String authHeader = "Bearer " + webinToken;
-            this.set("Authorization", authHeader);
-          }
-        };
+    final HttpHeaders headers = new HttpHeaders() {
+      {
+        final String authHeader = "Bearer " + webinToken;
+        this.set("Authorization", authHeader);
+      }
+    };
     headers.add("Content-Type", "application/json;charset=UTF-8");
     headers.add("Accept", "application/json");
     return headers;
